--- a/projects/00-hola-mundo/src/App.css
+++ b/projects/00-hola-mundo/src/App.css
@@ -4,7 +4,7 @@
     color: #fff;
     font-size: .8rem;
     justify-content: space-between;
-    width: 250px;
+    width: 100%;
     /* No se usa margin bottom */
     /* margin-bottom: 10px; */
 }
@@ -35,10 +35,27 @@
     transition: .3s ease background-color;
     border: 1px solid #fff;
 }
-
+.tw-followCard-text{
+    display: block;
+}
+.tw-followCard-button.is-following{
+    background-color: transparent;
+    color: #fff;
+    width: 140px;
+}
+.tw-followCard-button.is-following:hover .tw-followCard-text{
+    display: none;
+}
+.tw-followCard-button.is-following:hover .tw-followCard-stopFollow{
+    display: block;
+}
 .tw-followCard-button:hover{
-    background-color: #aaa;
+    opacity: .8;
 }
 .tw-followCard-button.is-following:hover{
-    background-color: red;
+    background-color: rgb(240, 204, 204);
+    color: red;
+}
+.tw-followCard-stopFollow{
+    display: none;
 }
