cambio de width
Width de follow card fija

--- a/projects/00-hola-mundo/src/App.css
+++ b/projects/00-hola-mundo/src/App.css
@@ -4,7 +4,7 @@
     color: #fff;
     font-size: .8rem;
     justify-content: space-between;
-    width: 100%;
+    width: 300px;
     /* No se usa margin bottom */
     /* margin-bottom: 10px; */
 }
